Add preloader and animated background styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,85 @@ body{
   overflow-x:hidden;
 }
 
-/* NAV */
+/* ===== PRELOADER ===== */
+
+#preloader{
+  position:fixed;
+  inset:0;
+  background:#05070d;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+  transition:opacity .8s ease, visibility .8s ease;
+}
+
+.loader-title{
+  font-family:Orbitron;
+  font-size:32px;
+  letter-spacing:4px;
+  animation:glitch 1.5s infinite;
+}
+
+.scan-bar{
+  margin-top:25px;
+  width:220px;
+  height:3px;
+  background:rgba(168,85,247,.2);
+  overflow:hidden;
+  position:relative;
+}
+
+.scan-bar::after{
+  content:"";
+  position:absolute;
+  height:100%;
+  width:40%;
+  background:#a855f7;
+  animation:scan 1.2s infinite;
+}
+
+@keyframes scan{
+  0%{left:-40%;}
+  100%{left:100%;}
+}
+
+@keyframes glitch{
+  0%{text-shadow:2px 0 #a855f7,-2px 0 #ff00ff;}
+  50%{text-shadow:-2px 0 #a855f7,2px 0 #ff00ff;}
+  100%{text-shadow:2px 0 #a855f7,-2px 0 #ff00ff;}
+}
+
+/* ===== ANIMATED BACKGROUND ===== */
+
+.background{
+  position:fixed;
+  inset:0;
+  z-index:-2;
+  background:
+    radial-gradient(circle at 30% 30%, rgba(168,85,247,.15), transparent 60%),
+    radial-gradient(circle at 70% 70%, rgba(255,0,255,.1), transparent 60%),
+    #06080f;
+}
+
+.grid{
+  position:fixed;
+  inset:0;
+  background-image:
+    linear-gradient(rgba(168,85,247,.07) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(168,85,247,.07) 1px, transparent 1px);
+  background-size:60px 60px;
+  animation:moveGrid 20s linear infinite;
+  z-index:-1;
+}
+
+@keyframes moveGrid{
+  0%{transform:translateY(0);}
+  100%{transform:translateY(60px);}
+}
+
+/* ===== NAV ===== */
 
 .nav{
   position:fixed;
@@ -27,10 +105,10 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  gap:40px;
-  background:rgba(10,12,20,0.7);
+  gap:35px;
+  background:rgba(10,12,20,0.6);
   backdrop-filter:blur(14px);
-  border-bottom:1px solid rgba(255,255,255,0.06);
+  border-bottom:1px solid rgba(255,255,255,0.05);
   z-index:10;
 }
 
@@ -46,18 +124,24 @@ body{
   text-shadow:0 0 12px #a855f7;
 }
 
-/* HERO */
+/* ===== HERO ===== */
 
 .hero{
   min-height:100vh;
-  padding-top:120px;
+  padding-top:130px;
   display:flex;
   flex-direction:column;
   align-items:center;
   text-align:center;
+  opacity:0;
+  transform:translateY(20px);
+  transition:1s ease;
 }
 
-/* AVATAR */
+.hero.show{
+  opacity:1;
+  transform:translateY(0);
+}
 
 .avatar{
   width:120px;
@@ -75,24 +159,18 @@ body{
   box-shadow:0 0 60px #a855f7;
 }
 
-/* TITLE */
-
 h1{
   font-family:Orbitron;
   font-size:52px;
   letter-spacing:4px;
-  font-weight:900;
 }
 
-/* MODULES */
+/* ===== MODULES ===== */
 
 .modules{
   margin-top:60px;
-  width:100%;
-  max-width:1000px;
   display:flex;
   flex-direction:column;
-  align-items:center;
   gap:30px;
 }
 
@@ -105,7 +183,7 @@ h1{
 
 .module{
   position:relative;
-  padding:35px 40px;
+  padding:35px 45px;
   min-width:260px;
   background:rgba(255,255,255,0.03);
   border:1px solid rgba(168,85,247,0.4);
@@ -146,9 +224,8 @@ h1{
 }
 
 .module:hover{
-  transform:translateY(-6px) scale(1.02);
-  border-color:#a855f7;
-  box-shadow:0 0 35px rgba(168,85,247,.6);
+  transform:translateY(-6px) scale(1.03);
+  box-shadow:0 0 40px rgba(168,85,247,.7);
 }
 
 /* FOOTER */
@@ -168,72 +245,49 @@ h1{
   color:#555;
 }
 
-/* CURSOR */
-
-#cursor{
-  position:fixed;
-  width:450px;
-  height:450px;
-  border-radius:50%;
-  pointer-events:none;
-  background:radial-gradient(circle, rgba(168,85,247,0.25) 0%, transparent 70%);
-  transform:translate(-50%,-50%);
-  z-index:-1;
-}
-
 @media(max-width:768px){
   h1{font-size:34px;}
   .module{min-width:220px;}
-  #cursor{display:none;}
 }
 </style>
 </head>
 <body>
 
-<!-- NAV -->
-<div class="nav">
-  <a href="https://donatex.gg/donate/kapitanych">Donatex</a>
-  <a href="https://www.donationalerts.com/r/bossgg">DonatAlerts</a>
-  <a href="https://t.me/KapitanGG">Telegram</a>
-  <a href="https://discord.com/">Discord</a>
-  <a href="https://www.youtube.com/@Капитаныч">YouTube</a>
-  <a href="https://www.tiktok.com/@tt_kapitanych">TikTok</a>
+<div id="preloader">
+  <div class="loader-title">INITIALIZING</div>
+  <div class="scan-bar"></div>
 </div>
 
-<section class="hero">
+<div class="background"></div>
+<div class="grid"></div>
+
+<div class="nav">
+  <a href="#">Donatex</a>
+  <a href="#">DonatAlerts</a>
+  <a href="#">Telegram</a>
+  <a href="#">Discord</a>
+  <a href="#">YouTube</a>
+  <a href="#">TikTok</a>
+</div>
+
+<section class="hero" id="hero">
 
   <img src="https://i.ibb.co/pr0NNwxx/444444.png"
-       class="avatar"
-       onclick="window.open('https://twitch.tv/kapitanych_','_blank')">
+       class="avatar">
 
   <h1>KAPITANYCH</h1>
 
   <div class="modules">
 
-    <!-- Первая строка -->
     <div class="row">
-      <div class="module" onclick="window.open('https://www.donationalerts.com/r/bossgg')">
-        <h3>DONATALERTS</h3>
-      </div>
-
-      <div class="module" onclick="window.open('https://t.me/KapitanGG')">
-        <h3>TELEGRAM</h3>
-      </div>
-
-      <div class="module" onclick="window.open('https://www.youtube.com/@Капитаныч')">
-        <h3>YOUTUBE</h3>
-      </div>
+      <div class="module"><h3>DONATALERTS</h3></div>
+      <div class="module"><h3>TELEGRAM</h3></div>
+      <div class="module"><h3>YOUTUBE</h3></div>
     </div>
 
-    <!-- Вторая строка -->
     <div class="row">
-      <div class="module" onclick="window.open('https://discord.com/')">
-        <h3>DISCORD</h3>
-      </div>
-
-      <div class="module" onclick="window.open('https://www.tiktok.com/@tt_kapitanych')">
-        <h3>TIKTOK</h3>
-      </div>
+      <div class="module"><h3>DISCORD</h3></div>
+      <div class="module"><h3>TIKTOK</h3></div>
     </div>
 
   </div>
@@ -247,25 +301,14 @@ h1{
 
 </section>
 
-<div id="cursor"></div>
-
 <script>
-const cursor=document.getElementById("cursor");
-let mouseX=0, mouseY=0, posX=0, posY=0;
-
-document.addEventListener("mousemove",e=>{
-  mouseX=e.clientX;
-  mouseY=e.clientY;
+window.addEventListener("load",()=>{
+  setTimeout(()=>{
+    document.getElementById("preloader").style.opacity="0";
+    document.getElementById("preloader").style.visibility="hidden";
+    document.getElementById("hero").classList.add("show");
+  },1500);
 });
-
-function loop(){
-  posX+=(mouseX-posX)*0.08;
-  posY+=(mouseY-posY)*0.08;
-  cursor.style.left=posX+"px";
-  cursor.style.top=posY+"px";
-  requestAnimationFrame(loop);
-}
-loop();
 </script>
 
 </body>
